Made JavaDoc run without errors (has many warnings!).